2015-01-07         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Update debug flags if developing.
	* awkgram.y (yylex): Regex parsing bug fix for bracket expressions.
	Thanks to Mike Brennan for the report.

2014-12-10         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2014-11-26         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_sub): Improve wording of gensub warnings.

2014-11-25         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_sub): For gensub, add more warnings for invalid
	third argument.

2014-11-23         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h: Move all inline functions to the bottom of the file.
	Keeps modern GCC happier.

2014-11-22         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (emalloc, realloc): Redefine in terms of ...
	(emalloc_real, eralloc_real): New static inline functions.
	(fatal): Move definition up.
	* gawkmisc.c (xmalloc): If count is zero, make it one for older
	mallocs that require size > 0 (such as z/OS).

2014-11-21         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c: Remove a debugging // comment.
	* NOTES: Removed.

	Unrelated:

	Revert changes of 2014-11-20 from Paul Eggert. Causes failures
	on z/OS.

	Unrelated: Avoid unnecessary copying of $0.

	* interpret.h (UNFIELD): New macro.
	(r_interpret): Use it where *lhs is assigned to.

2014-11-20  Paul Eggert  <eggert@cs.ucla.edu>

	Port to systems where malloc (0) and/or realloc(P, 0) returns NULL.
	* gawkmisc.c (xmalloc):
	* xalloc.h (realloc):
	Do not fail if malloc(0) or realloc(P, 0) returns NULL.
	Fail only when the allocator returns null when attempting to
	allocate a nonzero number of bytes.

2014-11-19         Arnold D. Robbins     <arnold@skeeve.com>

	Infrastructure upgrades:

	* Automake 1.14.1, Gettext 0.19.3, Libtool 2.4.3.
	* compile, extension/build-aux/compile: New files.

2014-11-19  gettextize  <bug-gnu-gettext@gnu.org>
