@@ -3,6 +3,11 @@
 	* Makefile.am (regexpbrack): New test.
 	* regexpbrack.awk, regexpbrack.in, regexpbrack.ok: New files.
 
+	Unrelated:
+
+	* Makefile.am (printfbad4): New test.
+	* printfbad4.awk, printfbad4.ok: New files.
+
 2014-12-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (badbuild): New test.
