@@ -3,6 +3,8 @@
 	* configure.ac: Update debug flags if developing.
 	* awkgram.y (yylex): Regex parsing bug fix for bracket expressions.
 	Thanks to Mike Brennan for the report.
+	* builtin.c (format_tree): Catch non-use of count$ for dynamic
+	field width or precision.
 
 2014-12-10         Arnold D. Robbins     <arnold@skeeve.com>
 
